build_log.txt
    Blocking waiting for file lock on artifact directory
   Compiling bitflags v2.12.1
   Compiling mio v1.2.1
   Compiling tokio v1.52.3
   Compiling signal-hook v0.3.18
   Compiling openssl v0.10.80
   Compiling rustix v1.1.4
   Compiling tokio-stream v0.1.18
   Compiling native-tls v0.2.18
   Compiling sqlx-core v0.7.4
   Compiling tempfile v3.27.0
   Compiling linux-raw-sys v0.4.15
   Compiling rustix v0.38.44
   Compiling sqlx-postgres v0.7.4
   Compiling nix v0.31.3
   Compiling signal-hook-mio v0.2.5
   Compiling ctrlc v3.5.2
   Compiling crossterm v0.28.1
   Compiling sqlx-macros-core v0.7.4
   Compiling sqlx-macros v0.7.4
   Compiling sqlx v0.7.4
   Compiling monedas_sistema v1.0.0 (/home/jean/programacion/rust/Mi-intento-de-Blockchain)
error[E0425]: cannot find function `print_cyan` in this scope
   --> src/main.rs:225:5
    |
225 |     print_cyan("\nPresiona 'N' en cualquier momento para detener el minado");
    |     ^^^^^^^^^^ not found in this scope
    |
help: consider importing this function
    |
  1 + use crate::utils::print_cyan;
    |

warning: unused import: `terminal`
 --> src/minar.rs:4:48
  |
4 | use crossterm::{event::{self, Event, KeyCode}, terminal};
  |                                                ^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default

For more information about this error, try `rustc --explain E0425`.
warning: `monedas_sistema` (bin "monedas_sistema") generated 1 warning
error: could not compile `monedas_sistema` (bin "monedas_sistema") due to 1 previous error; 1 warning emitted
